src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_dot(value self, value tensor);
value atg_dot_out(value out, value self, value tensor);
value atg_dropout(value input, double p, int train);
value atg_dropout_(value self, double p, int train);
value atg_dsplit(value self, int64_t sections);
value atg_dsplit_array(value self, value indices);
value atg_dstack(value tensors);
value atg_dstack_out(value out, value tensors);
value atg_einsum(const char * equation, value tensors, value path);
value atg_elu(value self, value alpha, value scale, value input_scale);
value atg_elu_(value self, value alpha, value scale, value input_scale);
value atg_elu_backward(value grad_output, value alpha, value scale, value input_scale, int is_result, value self_or_result);
value atg_elu_backward_grad_input(value grad_input, value grad_output, value alpha, value scale, value input_scale, int is_result, value self_or_result);
value atg_elu_out(value out, value self, value alpha, value scale, value input_scale);
value atg_embedding(value weight, value indices, int64_t padding_idx, int scale_grad_by_freq, int sparse);
value atg_embedding_backward(value grad, value indices, int64_t num_weights, int64_t padding_idx, int scale_grad_by_freq, int sparse);
value atg_embedding_bag(value weight, value indices, value offsets, int scale_grad_by_freq, int64_t mode, int sparse, value per_sample_weights, int include_last_offset);
value atg_embedding_bag_padding_idx(value weight, value indices, value offsets, int scale_grad_by_freq, int64_t mode, int sparse, value per_sample_weights, int include_last_offset, value padding_idx);
value atg_embedding_dense_backward(value grad_output, value indices, int64_t num_weights, int64_t padding_idx, int scale_grad_by_freq);
value atg_embedding_dense_backward_out(value out, value grad_output, value indices, int64_t num_weights, int64_t padding_idx, int scale_grad_by_freq);
value atg_embedding_out(value out, value weight, value indices, int64_t padding_idx, int scale_grad_by_freq, int sparse);
value atg_embedding_renorm(value self, value indices, double max_norm, double norm_type);
value atg_embedding_renorm_(value self, value indices, double max_norm, double norm_type);
value atg_embedding_renorm_out(value out, value self, value indices, double max_norm, double norm_type);
value atg_embedding_sparse_backward(value grad, value indices, int64_t num_weights, int64_t padding_idx, int scale_grad_by_freq);
value atg_empty(value size, int options_kind, int options_device);
value atg_empty_like(value self);
value atg_empty_like_out(value out, value self);
value atg_empty_out(value out, value size);
value atg_empty_permuted(value size, value physical_layout, int options_kind, int options_device);
value atg_empty_permuted_out(value out, value size, value physical_layout);
value atg_empty_quantized(value size, value qtensor, int options_kind, int options_device);
value atg_empty_quantized_out(value out, value size, value qtensor);
value atg_empty_strided(value size, value stride, int options_kind, int options_device);
value atg_empty_strided_out(value out, value size, value stride);
value atg_eq(value self, value other);
value atg_eq_(value self, value other);
value atg_eq_scalar_out(value out, value self, value other);
value atg_eq_tensor(value self, value other);
value atg_eq_tensor_(value self, value other);
value atg_eq_tensor_out(value out, value self, value other);
value atg_equal(value self, value other);
value atg_erf(value self);
value atg_erf_(value self);
value atg_erf_out(value out, value self);
value atg_erfc(value self);
value atg_erfc_(value self);
value atg_erfc_out(value out, value self);
value atg_erfinv(value self);
value atg_erfinv_(value self);
value atg_erfinv_out(value out, value self);
value atg_exp(value self);
value atg_exp2(value self);
value atg_exp2_(value self);
value atg_exp2_out(value out, value self);
value atg_exp_(value self);
value atg_exp_out(value out, value self);
value atg_expand(value self, value size, int implicit);
value atg_expand_as(value self, value other);
value atg_expand_copy(value self, value size, int implicit);
value atg_expand_copy_out(value out, value self, value size, int implicit);
value atg_expm1(value self);
value atg_expm1_(value self);
value atg_expm1_out(value out, value self);
value atg_exponential(value self, double lambd);
value atg_exponential_(value self, double lambd);
value atg_exponential_out(value out, value self, double lambd);
value atg_eye(int64_t n, int options_kind, int options_device);
value atg_eye_m(int64_t n, int64_t m, int options_kind, int options_device);
value atg_eye_m_out(value out, int64_t n, int64_t m);
value atg_eye_out(value out, int64_t n);
value atg_fake_quantize_per_channel_affine(value self, value scale, value zero_point, int64_t axis, int64_t quant_min, int64_t quant_max);
value atg_fake_quantize_per_channel_affine_cachemask(value self, value scale, value zero_point, int64_t axis, int64_t quant_min, int64_t quant_max);
value atg_fake_quantize_per_channel_affine_cachemask_backward(value grad, value mask);
value atg_fake_quantize_per_channel_affine_cachemask_out(value out0, value out1, value self, value scale, value zero_point, int64_t axis, int64_t quant_min, int64_t quant_max);
value atg_fake_quantize_per_tensor_affine(value self, double scale, int64_t zero_point, int64_t quant_min, int64_t quant_max);
value atg_fake_quantize_per_tensor_affine_cachemask(value self, double scale, int64_t zero_point, int64_t quant_min, int64_t quant_max);
value atg_fake_quantize_per_tensor_affine_cachemask_backward(value grad, value mask);
value atg_fake_quantize_per_tensor_affine_cachemask_out(value out0, value out1, value self, double scale, int64_t zero_point, int64_t quant_min, int64_t quant_max);
value atg_fake_quantize_per_tensor_affine_tensor_qparams(value self, value scale, value zero_point, int64_t quant_min, int64_t quant_max);