src/bindings/torch_bindings_generated3.ml

(* THIS FILE IS AUTOMATICALLY GENERATED, DO NOT EDIT BY HAND! *)

open Ctypes

module C0 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_dot = foreign "atg_dot" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_dot_out =
    foreign "atg_dot_out" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_dropout =
    foreign "atg_dropout" (gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_dropout_ =
    foreign "atg_dropout_" (gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_dsplit =
    foreign "atg_dsplit" (gc_tensor @-> int64_t @-> returning (ptr raw_tensor))
  ;;

  let stubs_dsplit_array =
    foreign
      "atg_dsplit_array"
      (gc_tensor @-> ptr int64_t @-> int @-> returning (ptr raw_tensor))
  ;;

  let stubs_dstack = foreign "atg_dstack" (ptr gc_tensor @-> int @-> returning raw_tensor)

  let stubs_dstack_out =
    foreign "atg_dstack_out" (gc_tensor @-> ptr gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_einsum =
    foreign
      "atg_einsum"
      (string @-> ptr gc_tensor @-> int @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_elu =
    foreign "atg_elu" (gc_tensor @-> scalar @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_elu_ =
    foreign
      "atg_elu_"
      (gc_tensor @-> scalar @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_elu_backward =
    foreign
      "atg_elu_backward"
      (gc_tensor
       @-> scalar
       @-> scalar
       @-> scalar
       @-> int
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_elu_backward_grad_input =
    foreign
      "atg_elu_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> scalar
       @-> int
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_elu_out =
    foreign
      "atg_elu_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_embedding =
    foreign
      "atg_embedding"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_embedding_backward =
    foreign
      "atg_embedding_backward"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_embedding_bag =
    foreign
      "atg_embedding_bag"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int64_t
       @-> int
       @-> gc_tensor
       @-> int
       @-> returning void)
  ;;

  let stubs_embedding_bag_padding_idx =
    foreign
      "atg_embedding_bag_padding_idx"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int64_t
       @-> int
       @-> gc_tensor
       @-> int
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs_embedding_dense_backward =
    foreign
      "atg_embedding_dense_backward"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_embedding_dense_backward_out =
    foreign
      "atg_embedding_dense_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_embedding_out =
    foreign
      "atg_embedding_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_embedding_renorm =
    foreign
      "atg_embedding_renorm"
      (gc_tensor @-> gc_tensor @-> double @-> double @-> returning raw_tensor)
  ;;

  let stubs_embedding_renorm_ =
    foreign
      "atg_embedding_renorm_"
      (gc_tensor @-> gc_tensor @-> double @-> double @-> returning raw_tensor)
  ;;

  let stubs_embedding_renorm_out =
    foreign
      "atg_embedding_renorm_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> returning raw_tensor)
  ;;

  let stubs_embedding_sparse_backward =
    foreign
      "atg_embedding_sparse_backward"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_empty =
    foreign "atg_empty" (ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_empty_like = foreign "atg_empty_like" (gc_tensor @-> returning raw_tensor)

  let stubs_empty_like_out =
    foreign "atg_empty_like_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_empty_out =
    foreign "atg_empty_out" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_empty_permuted =
    foreign
      "atg_empty_permuted"
      (ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_empty_permuted_out =
    foreign
      "atg_empty_permuted_out"
      (gc_tensor @-> ptr int64_t @-> int @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_empty_quantized =
    foreign
      "atg_empty_quantized"
      (ptr int64_t @-> int @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_empty_quantized_out =
    foreign
      "atg_empty_quantized_out"
      (gc_tensor @-> ptr int64_t @-> int @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_empty_strided =
    foreign
      "atg_empty_strided"
      (ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_empty_strided_out =
    foreign
      "atg_empty_strided_out"
      (gc_tensor @-> ptr int64_t @-> int @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_eq = foreign "atg_eq" (gc_tensor @-> scalar @-> returning raw_tensor)
  let stubs_eq_ = foreign "atg_eq_" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs_eq_scalar_out =
    foreign
      "atg_eq_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_eq_tensor =
    foreign "atg_eq_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_eq_tensor_ =
    foreign "atg_eq_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_eq_tensor_out =
    foreign
      "atg_eq_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_equal = foreign "atg_equal" (gc_tensor @-> gc_tensor @-> returning bool)
  let stubs_erf = foreign "atg_erf" (gc_tensor @-> returning raw_tensor)
  let stubs_erf_ = foreign "atg_erf_" (gc_tensor @-> returning raw_tensor)

  let stubs_erf_out =
    foreign "atg_erf_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_erfc = foreign "atg_erfc" (gc_tensor @-> returning raw_tensor)
  let stubs_erfc_ = foreign "atg_erfc_" (gc_tensor @-> returning raw_tensor)

  let stubs_erfc_out =
    foreign "atg_erfc_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_erfinv = foreign "atg_erfinv" (gc_tensor @-> returning raw_tensor)
  let stubs_erfinv_ = foreign "atg_erfinv_" (gc_tensor @-> returning raw_tensor)

  let stubs_erfinv_out =
    foreign "atg_erfinv_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_exp = foreign "atg_exp" (gc_tensor @-> returning raw_tensor)
  let stubs_exp2 = foreign "atg_exp2" (gc_tensor @-> returning raw_tensor)
  let stubs_exp2_ = foreign "atg_exp2_" (gc_tensor @-> returning raw_tensor)

  let stubs_exp2_out =
    foreign "atg_exp2_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_exp_ = foreign "atg_exp_" (gc_tensor @-> returning raw_tensor)

  let stubs_exp_out =
    foreign "atg_exp_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_expand =
    foreign
      "atg_expand"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_expand_as =
    foreign "atg_expand_as" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_expand_copy =
    foreign
      "atg_expand_copy"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_expand_copy_out =
    foreign
      "atg_expand_copy_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_expm1 = foreign "atg_expm1" (gc_tensor @-> returning raw_tensor)
  let stubs_expm1_ = foreign "atg_expm1_" (gc_tensor @-> returning raw_tensor)

  let stubs_expm1_out =
    foreign "atg_expm1_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_exponential =
    foreign "atg_exponential" (gc_tensor @-> double @-> returning raw_tensor)
  ;;

  let stubs_exponential_ =
    foreign "atg_exponential_" (gc_tensor @-> double @-> returning raw_tensor)
  ;;

  let stubs_exponential_out =
    foreign
      "atg_exponential_out"
      (gc_tensor @-> gc_tensor @-> double @-> returning raw_tensor)
  ;;

  let stubs_eye = foreign "atg_eye" (int64_t @-> int @-> int @-> returning raw_tensor)

  let stubs_eye_m =
    foreign "atg_eye_m" (int64_t @-> int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_eye_m_out =
    foreign "atg_eye_m_out" (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_eye_out =
    foreign "atg_eye_out" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_fake_quantize_per_channel_affine =
    foreign
      "atg_fake_quantize_per_channel_affine"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_fake_quantize_per_channel_affine_cachemask =
    foreign
      "atg_fake_quantize_per_channel_affine_cachemask"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning void)
  ;;

  let stubs_fake_quantize_per_channel_affine_cachemask_backward =
    foreign
      "atg_fake_quantize_per_channel_affine_cachemask_backward"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_fake_quantize_per_channel_affine_cachemask_out =
    foreign
      "atg_fake_quantize_per_channel_affine_cachemask_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning void)
  ;;

  let stubs_fake_quantize_per_tensor_affine =
    foreign
      "atg_fake_quantize_per_tensor_affine"
      (gc_tensor @-> double @-> int64_t @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_fake_quantize_per_tensor_affine_cachemask =
    foreign
      "atg_fake_quantize_per_tensor_affine_cachemask"
      (ptr raw_tensor
       @-> gc_tensor
       @-> double
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning void)
  ;;

  let stubs_fake_quantize_per_tensor_affine_cachemask_backward =
    foreign
      "atg_fake_quantize_per_tensor_affine_cachemask_backward"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_fake_quantize_per_tensor_affine_cachemask_out =
    foreign
      "atg_fake_quantize_per_tensor_affine_cachemask_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning void)
  ;;

  let stubs_fake_quantize_per_tensor_affine_tensor_qparams =
    foreign
      "atg_fake_quantize_per_tensor_affine_tensor_qparams"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;
